# atspro

./: .env.example  .gitignore  .mcp.json  ATSPro-Strategic-Roadmap.md  CLAUDE.md  CRUSH.md  PROMPT.md  README.md  TODO.md  TODO_BACKLOG.md  bunfig.toml  debug_resume.py  docker-compose.override.yml  docker-compose.yml  docker-logs-analysis-2025-08-17.md  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  run-tests.sh  svelte.config.js  test-resume.txt  test_profile_fix.py  turbo.json  vitest-setup-client.ts  vitest-setup.ts  vitest.config.ts
apps/api/: .coverage  .dockerignore  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  SERVICE_UTILS_IMPLEMENTATION_SUMMARY.md  endpoint_summary.md  pyproject.toml  test_endpoint_structure.py  test_job.txt  test_job_parse_document.py  test_resume_upload_workflow.py
apps/api/app/: auth.py  config.py  dependencies.py  main.py
apps/api/docs/: migration-job-service-postgres.md  resume_processor_service.md
apps/api/examples/: service_utils_usage.py
apps/api/scripts/: MIGRATION_SUMMARY.md  README.md  check_arango_data.py  migrate_data.py  prepare_migration_users.py  verify_postgres_migration.py
apps/api/tests/: conftest.py  test_advanced_workers.py  test_critical_405_fix.py  test_database_error_handling.py  test_health.py  test_integration_workflows.py  test_job_async.py  test_job_crud_endpoints.py  test_job_parse_document.py  test_job_service_crud.py  test_job_service_postgres.py  test_job_worker.py  test_manual_resume_creation.py  test_optimization_endpoints.py  test_parse.py  test_parse_async.py  test_queue_system.py  test_resume_endpoints.py  (+10 more)
(+1375 files in other folders)
